@@ -18,10 +18,11 @@ Foundation, 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.  */
 
 #include "cpplib.h"
 
-#ifndef HAVE_UCHAR
+#if !defined (HAVE_UCHAR) && !defined (IN_GCC)
 typedef unsigned char uchar;
 #endif
-#define U (const uchar *)  /* Intended use: U"string" */
+
+#define U (const unsigned char *)  /* Intended use: U"string" */
 
 /* Chained list of answers to an assertion.  */
 struct answer GTY(())
@@ -48,7 +49,7 @@ struct cpp_macro GTY(())
   union cpp_macro_u
   {
     cpp_token * GTY ((tag ("0"), length ("%0.count"))) tokens;
-    const uchar * GTY ((tag ("1"))) text;
+    const unsigned char * GTY ((tag ("1"))) text;
   } GTY ((desc ("%1.traditional"))) exp;
 
   /* Definition line number.  */
