@@ -157,8 +157,8 @@ struct cpp_context
     /* For traditional macro expansion.  */
     struct
     {
-      const uchar *cur;
-      const uchar *rlimit;
+      const unsigned char *cur;
+      const unsigned char *rlimit;
     } trad;
   } u;
 
@@ -232,7 +232,7 @@ typedef struct _cpp_line_note _cpp_line_note;
 struct _cpp_line_note
 {
   /* Location in the clean line the note refers to.  */
-  const uchar *pos;
+  const unsigned char *pos;
 
   /* Type of note.  The 9 'from' trigraph characters represent those
      trigraphs, '\\' an escaped newline, ' ' an escaped newline with
@@ -243,17 +243,17 @@ struct _cpp_line_note
 /* Represents the contents of a file cpplib has read in.  */
 struct cpp_buffer
 {
-  const uchar *cur;		/* Current location.  */
-  const uchar *line_base;	/* Start of current physical line.  */
-  const uchar *next_line;	/* Start of to-be-cleaned logical line.  */
+  const unsigned char *cur;        /* Current location.  */
+  const unsigned char *line_base;  /* Start of current physical line.  */
+  const unsigned char *next_line;  /* Start of to-be-cleaned logical line.  */
 
-  const uchar *buf;		/* Entire character buffer.  */
-  const uchar *rlimit;		/* Writable byte at end of file.  */
+  const unsigned char *buf;        /* Entire character buffer.  */
+  const unsigned char *rlimit;     /* Writable byte at end of file.  */
 
-  _cpp_line_note *notes;	/* Array of notes.  */
-  unsigned int cur_note;	/* Next note to process.  */
-  unsigned int notes_used;	/* Number of notes.  */
-  unsigned int notes_cap;	/* Size of allocated array.  */
+  _cpp_line_note *notes;           /* Array of notes.  */
+  unsigned int cur_note;           /* Next note to process.  */
+  unsigned int notes_used;         /* Number of notes.  */
+  unsigned int notes_cap;          /* Size of allocated array.  */
 
   struct cpp_buffer *prev;
 
@@ -385,8 +385,8 @@ struct cpp_reader
   struct cset_converter wide_cset_desc;
 
   /* Date and time text.  Calculated together if either is requested.  */
-  const uchar *date;
-  const uchar *time;
+  const unsigned char *date;
+  const unsigned char *time;
 
   /* EOF token, and a token forcing paste avoidance.  */
   cpp_token avoid_paste;
@@ -429,14 +429,14 @@ struct cpp_reader
   /* Traditional preprocessing output buffer (a logical line).  */
   struct
   {
-    uchar *base;
-    uchar *limit;
-    uchar *cur;
+    unsigned char *base;
+    unsigned char *limit;
+    unsigned char *cur;
     source_location first_line;
   } out;
 
   /* Used for buffer overlays by cpptrad.c.  */
-  const uchar *saved_cur, *saved_rlimit, *saved_line_base;
+  const unsigned char *saved_cur, *saved_rlimit, *saved_line_base;
 
   /* A saved list of the defined macros, for dependency checking
      of precompiled headers.  */
@@ -490,11 +490,12 @@ extern void _cpp_free_definition (cpp_hashnode *);
 extern bool _cpp_create_definition (cpp_reader *, cpp_hashnode *);
 extern void _cpp_pop_context (cpp_reader *);
 extern void _cpp_push_text_context (cpp_reader *, cpp_hashnode *,
-				    const uchar *, size_t);
+				    const unsigned char *, size_t);
 extern bool _cpp_save_parameter (cpp_reader *, cpp_macro *, cpp_hashnode *);
 extern bool _cpp_arguments_ok (cpp_reader *, cpp_macro *, const cpp_hashnode *,
 			       unsigned int);
-extern const uchar *_cpp_builtin_macro_text (cpp_reader *, cpp_hashnode *);
+extern const unsigned char *_cpp_builtin_macro_text (cpp_reader *,
+						     cpp_hashnode *);
 int _cpp_warn_if_unused_macro (cpp_reader *, cpp_hashnode *, void *);
 /* In cpphash.c */
 extern void _cpp_init_hashtable (cpp_reader *, hash_table *);
@@ -552,66 +553,70 @@ extern void _cpp_pop_buffer (cpp_reader *);
 /* In cpptrad.c.  */
 extern bool _cpp_scan_out_logical_line (cpp_reader *, cpp_macro *);
 extern bool _cpp_read_logical_line_trad (cpp_reader *);
-extern void _cpp_overlay_buffer (cpp_reader *pfile, const uchar *, size_t);
+extern void _cpp_overlay_buffer (cpp_reader *pfile, const unsigned char *,
+				 size_t);
 extern void _cpp_remove_overlay (cpp_reader *);
 extern bool _cpp_create_trad_definition (cpp_reader *, cpp_macro *);
 extern bool _cpp_expansions_different_trad (const cpp_macro *,
 					    const cpp_macro *);
-extern uchar *_cpp_copy_replacement_text (const cpp_macro *, uchar *);
+extern unsigned char *_cpp_copy_replacement_text (const cpp_macro *,
+						  unsigned char *);
 extern size_t _cpp_replacement_text_len (const cpp_macro *);
 
 /* In cppcharset.c.  */
-extern cppchar_t _cpp_valid_ucn (cpp_reader *, const uchar **,
-				 const uchar *, int);
+extern cppchar_t _cpp_valid_ucn (cpp_reader *, const unsigned char **,
+				 const unsigned char *, int);
 extern void _cpp_destroy_iconv (cpp_reader *);
-extern uchar *_cpp_convert_input (cpp_reader *, const char *, uchar *,
-				  size_t, size_t, off_t *);
+extern unsigned char *_cpp_convert_input (cpp_reader *, const char *,
+					  unsigned char *, size_t, size_t,
+					  off_t *);
 extern const char *_cpp_default_encoding (void);
 
 /* Utility routines and macros.  */
-#define DSC(str) (const uchar *)str, sizeof str - 1
+#define DSC(str) (const unsigned char *)str, sizeof str - 1
 
 /* These are inline functions instead of macros so we can get type
    checking.  */
-static inline int ustrcmp (const uchar *, const uchar *);
-static inline int ustrncmp (const uchar *, const uchar *, size_t);
-static inline size_t ustrlen (const uchar *);
-static inline uchar *uxstrdup (const uchar *);
-static inline uchar *ustrchr (const uchar *, int);
-static inline int ufputs (const uchar *, FILE *);
+static inline int ustrcmp (const unsigned char *, const unsigned char *);
+static inline int ustrncmp (const unsigned char *, const unsigned char *,
+			    size_t);
+static inline size_t ustrlen (const unsigned char *);
+static inline unsigned char *uxstrdup (const unsigned char *);
+static inline unsigned char *ustrchr (const unsigned char *, int);
+static inline int ufputs (const unsigned char *, FILE *);
 
 static inline int
-ustrcmp (const uchar *s1, const uchar *s2)
+ustrcmp (const unsigned char *s1, const unsigned char *s2)
 {
   return strcmp ((const char *)s1, (const char *)s2);
 }
 
 static inline int
-ustrncmp (const uchar *s1, const uchar *s2, size_t n)
+ustrncmp (const unsigned char *s1, const unsigned char *s2, size_t n)
 {
   return strncmp ((const char *)s1, (const char *)s2, n);
 }
 
 static inline size_t
-ustrlen (const uchar *s1)
+ustrlen (const unsigned char *s1)
 {
   return strlen ((const char *)s1);
 }
 
-static inline uchar *
-uxstrdup (const uchar *s1)
+static inline unsigned char *
+uxstrdup (const unsigned char *s1)
 {
-  return (uchar *) xstrdup ((const char *)s1);
+  return (unsigned char *) xstrdup ((const char *)s1);
 }
 
-static inline uchar *
-ustrchr (const uchar *s1, int c)
+static inline unsigned char *
+ustrchr (const unsigned char *s1, int c)
 {
-  return (uchar *) strchr ((const char *)s1, c);
+  return (unsigned char *) strchr ((const char *)s1, c);
 }
 
 static inline int
-ufputs (const uchar *s, FILE *f)
+ufputs (const unsigned char *s, FILE *f)
 {
   return fputs ((const char *)s, f);
 }
